swen430as1/tests/invalid/real/Real_Invalid_12.while
type Point is {int x, int y}

void main() {
    {Point p} p = {p:{x:1,y:2.0}};
}
